# PHAS0100Assignment3

./: CMakeLists.txt  CTestConfig.cmake  README.md  rename.sh
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  pa3IncludeMPI.cmake  pa3IncludeOpenMP.cmake  pa3SetupMSVCRuntime.cmake  pa3SetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  pa3HelloWorld.cpp
Code/Lib/: CMakeLists.txt  pa3Exception.cpp  pa3Exception.h  pa3ExceptionMacro.h  pa3MyFunctions.cpp  pa3MyFunctions.h  pa3Win32ExportHeader.h
Testing/: CMakeLists.txt  pa3CatchMain.cpp  pa3CatchMain.h  pa3CommandLineArgsTest.cpp  pa3MyFunctionsTest.cpp  pa3PiSeriesMPITest.cpp  pa3PiSeriesOMPTest.cpp  pa3TriangleNumberSeriesMPITest.cpp
